cabal-version:       2.4

name:                ye
version:             0.1.0.0
synopsis:            A tcp load balancer
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Shawn Rebello
maintainer:          shawn.nigel@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable ye
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  extensions:     ScopedTypeVariables
  build-depends:    base
                   , network
                   , stm
                   , data-default-class
                   , optparse-applicative
                   , lens
                   , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

