cabal-version:       2.4

name:                ye
version:             0.1.0.0
synopsis:            A tcp load balancer
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Shawn Rebello
maintainer:          shawn.nigel@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable ye
  main-is:             Main.hs
  other-modules:       LoadBalance
                      , Config
  -- other-extensions:
  extensions:     ScopedTypeVariables
  build-depends:    base
                   , network
                   , stm
                   , data-default-class
                   , optparse-applicative
                   , lens
                   , bytestring
  hs-source-dirs:      app
                      , src
  default-language:    Haskell2010

